BugzID: #35707 - fix text alignment, color, and positioning

--- a/drupal/profiles/takepart/themes/takepart3/css/legacy.css
+++ b/drupal/profiles/takepart/themes/takepart3/css/legacy.css
@@ -1131,6 +1131,9 @@ div.takepart_addthis_footer div.buttons {
     display: inline;
     float: left;
     font-weight: 300;
+    color: #000;
+    text-transform: none;
+    margin-top: 2px;
 }
 
 #comments .header {
